--- a/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra-truc-tuyen/bai-kiem-tra-truc-tuyen.component.html
+++ b/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra-truc-tuyen/bai-kiem-tra-truc-tuyen.component.html
@@ -42,6 +42,7 @@
           <ul class="list-group list-group-flush">
             <li class="list-group-item">Lớp {{item.Lop}}</li>
             <li class="list-group-item">Thời gian làm bài: {{item.ThoiGianLamBai}} (phút)</li>
+            <li class="list-group-item">Giờ thi: {{item.GioThi}}</li>
           </ul>
           <div class="card-body">
             <!-- <a class="btn btn-primary" (click) = "editOnlineExam(item)">Bổ sung/chỉnh sửa thông tin</a>
