--- a/Angular_Client/src/app/pages/components/__hoc_sinh/bai-kiem-tra-truc-tuyen/bai-kiem-tra-truc-tuyen.component.html
+++ b/Angular_Client/src/app/pages/components/__hoc_sinh/bai-kiem-tra-truc-tuyen/bai-kiem-tra-truc-tuyen.component.html
@@ -40,6 +40,7 @@
           <ul class="list-group list-group-flush">
             <li class="list-group-item">Lớp {{item.Lop}}</li>
             <li class="list-group-item">Thời gian làm bài: {{item.ThoiGianLamBai}} (phút)</li>
+            <li class="list-group-item">Giờ thi: {{item.GioThi}}</li>
           </ul>
           <div class="card-body text-center">
             <button class="btn btn-primary" (click)="checkPassword(item.Id,item.NgayThi,item.GioThi)">Bắt đầu làm bài</button>
