Thêm module chủ nhiệm & tạo chức năng thông báo

--- a/Angular_Client/src/app/_metronic/partials/layout/extras/toolbar/toolbar.component.html
+++ b/Angular_Client/src/app/_metronic/partials/layout/extras/toolbar/toolbar.component.html
@@ -1,7 +1,7 @@
 <!--begin::Sticky Toolbar-->
-<ul class="sticky-toolbar nav flex-column pl-2 pr-2 pt-3 pb-3 mt-4">
+<!-- <ul class="sticky-toolbar nav flex-column pl-2 pr-2 pt-3 pb-3 mt-4"> -->
   <!--begin::Item-->
-  <li
+  <!-- <li
     class="nav-item mb-2"
     data-toggle="tooltip"
     title="Layout Builder"
@@ -13,11 +13,11 @@
     >
       <i class="flaticon2-gear"></i>
     </a>
-  </li>
+  </li> -->
   <!--end::Item-->
 
   <!--begin::Item-->
-  <li
+  <!-- <li
     class="nav-item mb-2"
     data-toggle="tooltip"
     title="Documentation"
@@ -30,7 +30,7 @@
     >
       <i class="flaticon2-telegram-logo"></i>
     </a>
-  </li>
+  </li> -->
   <!--end::Item-->
-</ul>
+<!-- </ul> -->
 <!--end::Sticky Toolbar-->
