--- a/Angular_Client/src/app/pages/components/__hoc_sinh/bai-kiem-tra-truc-tuyen/bai-kiem-tra-truc-tuyen-detail/bai-kiem-tra-truc-tuyen-detail.component.html
+++ b/Angular_Client/src/app/pages/components/__hoc_sinh/bai-kiem-tra-truc-tuyen/bai-kiem-tra-truc-tuyen-detail/bai-kiem-tra-truc-tuyen-detail.component.html
@@ -1,14 +1,8 @@
 <div class="card card-custom gutter-b">
     <!-- Header Modal -->
-    <div class="card-header">
-      <div class="card-title">
-        <h3 class="card-label">{{tenBaiKiemTra}}</h3>
-      </div>
+    <div class="card-header d-flex flex-row-reverse">
       <div class="card-toolbar">
-        <button type="button" class="btn btn-light btn-elevate mr-2">
-          Trở lại
-        </button>
-        <button type="button" class="btn btn-primary mr-2" (click) = "save()">Lưu</button>
+        <button type="button" class="btn btn-primary mr-2" (click) = "save()">Nộp bài</button>
       </div>
     </div>
     <!-- End Header -->
@@ -19,28 +13,34 @@
           <div class="spinner spinner-lg spinner-success"></div>
         </div>
       </ng-container>
-      <countdown #cd [config]="{ leftTime: thoiGianLamBai * 60 }" style="color: red" (event)="onTimerFinished($event)"></countdown>
+      <div class="d-flex flex-row-reverse">
+          <div class="countdown">
+            <countdown #cd [config]="{ leftTime: thoiGianLamBai * 60 }" class="countdown_item" [ngClass]="" (event)="onTimerFinished($event)"></countdown>
+          </div>
+      </div>
       
       <ng-container *ngIf="data">
         <ng-container *ngFor="let item of this.data; let i = index">
           <div class="card text-left mb-5">
-            <div class="card-header"><p class="text-header" [innerHTML]="'<strong>Câu '+(i+1)+': </strong> '+item.TieuDe"></p></div>
+            <div class="card-header">
+              <p class="text-header title" [innerHTML]="'<strong>Câu '+(i+1)+': </strong> '+item.TieuDe"></p>
+            </div>
             <div class="card-body" >
               <mat-radio-group (change)="radioChecked(item.Id, item.IdQueston, $event, cd)">
                 <mat-radio-button value=1 [checked]="item.choosen == 1">
-                  <p class="card-text text-header" [innerHTML]="item.CauA"></p>
+                  <span class="option" [innerHTML]="item.CauA"></span>
                 </mat-radio-button>
                 <hr/>
                 <mat-radio-button value=2 [checked]="item.choosen == 2">
-                  <p class="card-text text-header" [innerHTML]="item.CauB"></p>
+                  <span class="option" [innerHTML]="item.CauB"></span>
                 </mat-radio-button>
                 <hr/>
                 <mat-radio-button value=3 [checked]="item.choosen == 3">
-                  <p class="card-text text-header" [innerHTML]="item.CauC"></p>
+                  <span class="option" [innerHTML]="item.CauC"></span>
                 </mat-radio-button>
                 <hr/>
                 <mat-radio-button value=4 [checked]="item.choosen == 4"> 
-                  <p class="card-text text-header" [innerHTML]="item.CauD"></p>
+                  <span class="option" [innerHTML]="item.CauD"></span>
                 </mat-radio-button>
               </mat-radio-group>
             </div>
@@ -49,5 +49,12 @@
       </ng-container>
     </div>
     <!-- End Body -->
+        <!-- Header Modal -->
+        <div class="card-footer d-flex justify-content-center">
+          <div class="card-toolbar">
+            <button type="button" class="btn btn-primary mr-2" (click) = "save()">Nộp bài</button>
+          </div>
+        </div>
+        <!-- End Header -->
   </div>
   
