--- a/Angular_Client/src/app/pages/_layout/components/topbar/topbar.component.html
+++ b/Angular_Client/src/app/pages/_layout/components/topbar/topbar.component.html
@@ -15,25 +15,25 @@
   </ng-container>
 
   <ng-container *ngIf="extrasSearchLayout === 'dropdown'" id="kt_quick_search_toggle">
-    <div class="dropdown" id="kt_quick_search_toggle" autoClose="outside" ngbDropdown>
+    <!-- <div class="dropdown" id="kt_quick_search_toggle" autoClose="outside" ngbDropdown> -->
       <!--begin::Toggle-->
-      <div class="topbar-item" ngbDropdownToggle>
-        <div class="btn btn-icon btn-clean btn-lg btn-dropdown mr-1">
+      <!-- <div class="topbar-item" ngbDropdownToggle> -->
+        <!-- <div class="btn btn-icon btn-clean btn-lg btn-dropdown mr-1">
           <span
             [inlineSVG]="'./assets/media/svg/icons/General/Search.svg'"
             cacheSVG="true"
             class="svg-icon svg-icon-xl svg-icon-primary"
           ></span>
         </div>
-      </div>
+      </div> -->
       <!--end::Toggle-->
 
       <!--begin::Dropdown-->
-      <div class="dropdown-menu p-0 m-0 dropdown-menu-right dropdown-menu-anim-up dropdown-menu-lg" ngbDropdownMenu>
+      <!-- <div class="dropdown-menu p-0 m-0 dropdown-menu-right dropdown-menu-anim-up dropdown-menu-lg" ngbDropdownMenu>
         <app-search-dropdown-inner></app-search-dropdown-inner>
-      </div>
+      </div> -->
       <!--end::Dropdown-->
-    </div>
+    <!-- </div> -->
   </ng-container>
 </ng-container>
 
@@ -50,7 +50,7 @@
           cacheSVG="true"
           class="svg-icon svg-icon-xl svg-icon-primary"
         ></span>
-        <span class="pulse-ring"></span>
+        <span matBadge="1" matBadgeColor="warn" class="pulse-ring"></span>
       </div>
     </div>
     <!--end::Notifications-->
@@ -62,8 +62,8 @@
       <!--begin::Toggle-->
       <div class="topbar-item" data-toggle="dropdown" data-offset="10px,0px" ngbDropdownToggle>
         <div class="btn btn-icon btn-clean btn-dropdown btn-lg mr-1 pulse pulse-primary">
-          <i class="flaticon2-bell-4 text-primary"></i>
-          <span class="pulse-ring"></span>
+          <i [matBadge]="unRead" matBadgeColor="warn" class="flaticon2-bell-4 text-warning"></i>
+          <!-- <span class="pulse-ring"></span> -->
         </div>
       </div>
       <!--end::Toggle-->
