--- a/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra-truc-tuyen/bai-kiem-tra-truc-tuyen.component.html
+++ b/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra-truc-tuyen/bai-kiem-tra-truc-tuyen.component.html
@@ -32,9 +32,9 @@
       </div>
     </div>
     <!-- End Search Filter -->
-    <div class="card-body d-flex flex-row bd-highlight flex-wrap justify-content-between">
+    <div class="card-body d-flex flex-row bd-highlight flex-wrap">
       <ng-container *ngFor="let item of services.items$ | async; let i = index">
-        <div class="card mb-3 mr-3" style="width: 30%">
+        <div class="card mb-3 mr-3" style="width: 30%; float:left">
           <div class="card-body">
             <h5 class="card-title">{{ item.TenBaiKiemTra }} ({{item.NamHoc}})</h5>
             <p class="card-text">{{ item.SoLuongDe }} đề thi</p>
@@ -76,7 +76,7 @@
         </div>
       </ng-container>
     </div>
-    <app-paginator class="d-flex justify-content-between align-items-center flex-wrap" [paginator]="paginator"
+    <app-paginator class="d-flex justify-content-between align-items-center flex-wrap" style="clear:both;" [paginator]="paginator"
       [isLoading]="isLoading" (paginate)="paginate($event)">
     </app-paginator>
   </div>
