--- a/Angular_Client/src/app/_metronic/partials/layout/extras/offcanvas/user-offcanvas/user-offcanvas.component.html
+++ b/Angular_Client/src/app/_metronic/partials/layout/extras/offcanvas/user-offcanvas/user-offcanvas.component.html
@@ -37,7 +37,7 @@
         <div class="symbol symbol-100 mr-5"></div>
         <div class="d-flex flex-column">
           <div class="navi mt-2">
-            <a class="btn btn-sm btn-light-primary font-weight-bolder py-2 px-5 mr-5 cursor-pointer" (click)="logout()"
+            <a class="btn btn-sm btn-light-primary font-weight-bolder py-2 px-5 mr-5 cursor-pointer" (click)="information(_user.id)"
               >Quản lí tài khoản</a>
             <a class="btn btn-sm btn-light-danger font-weight-bolder py-2 px-5 cursor-pointer" (click)="logout()"
               >Đăng xuất</a>
