--- a/Angular_Client/src/app/pages/components/__hoc_sinh/bai-kiem-tra-truc-tuyen/bai-kiem-tra-truc-tuyen-detail/bai-kiem-tra-truc-tuyen-detail.component.html
+++ b/Angular_Client/src/app/pages/components/__hoc_sinh/bai-kiem-tra-truc-tuyen/bai-kiem-tra-truc-tuyen-detail/bai-kiem-tra-truc-tuyen-detail.component.html
@@ -1,8 +1,16 @@
 <div class="card card-custom gutter-b">
     <!-- Header Modal -->
     <div class="card-header d-flex flex-row-reverse">
-      <div class="card-toolbar">
+      <div class="card-title">
+        <!-- <h3 class="card-label">{{tenBaiKiemTra}}</h3>
+        <h3 class="card-label">{{maDe}}</h3> -->
         <button type="button" class="btn btn-primary mr-2" (click) = "save()">Nộp bài</button>
+      </div>
+      <div class="card-toolbar">
+        
+        <h3 class="card-label">{{tenBaiKiemTra}}   </h3>
+        -
+        <h3 class="card-label"> Mã đề: {{maDe}}</h3>
       </div>
     </div>
     <!-- End Header -->
