--- a/Angular_Client/src/app/_metronic/partials/layout/extras/offcanvas/user-offcanvas/user-offcanvas.component.html
+++ b/Angular_Client/src/app/_metronic/partials/layout/extras/offcanvas/user-offcanvas/user-offcanvas.component.html
@@ -39,6 +39,8 @@
           <div class="navi mt-2">
             <a class="btn btn-sm btn-light-primary font-weight-bolder py-2 px-5 mr-5 cursor-pointer" (click)="logout()"
               >Quản lí tài khoản</a>
+              <a class="btn btn-sm btn-light-primary font-weight-bolder py-2 px-5 mr-5 cursor-pointer" (click)="changePassword()"
+              >Đổi mật khẩu</a>
             <a class="btn btn-sm btn-light-danger font-weight-bolder py-2 px-5 cursor-pointer" (click)="logout()"
               >Đăng xuất</a>
           </div>
