--- a/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra/bai-kiem-tra.component.html
+++ b/Angular_Client/src/app/pages/components/__danh_muc/bai-kiem-tra/bai-kiem-tra.component.html
@@ -20,25 +20,17 @@
             type="text"
             value=""
             class="form-control"
-            placeholder="Tìm kiếm mã câu hỏi hoặc tiêu đề"
+            placeholder="Tìm kiếm tên bài kiểm tra hoặc ngày tạo"
             name="searchText"
             formControlName="searchTerm"
           />
           <small class="form-text text-muted"><b>Tìm kiếm</b> dữ liệu</small>
         </div>
         <div class="col-lg-4" [formGroup]="searchGroup">
-          <mat-select class="form-control" placeholder="Chọn câu đúng" name="correctOption">
-            <mat-option value="1">Dễ</mat-option>
-            <mat-option value="2">Trung bình</mat-option>
-            <mat-option value="3">Khó</mat-option>
-          </mat-select>
-          <small class="form-text text-muted"><b>Lọc</b> cấp độ</small>
-        </div>
-        <div class="col-lg-4" [formGroup]="searchGroup">
-          <mat-select class="form-control" placeholder="Chọn khối" name="correctOption">
-            <mat-option value="1">Khối 10</mat-option>
-            <mat-option value="2">Khối 11</mat-option>
-            <mat-option value="3">Khối 12</mat-option>
+          <mat-select class="form-control" placeholder="Chọn khối" name="correctOption" formControlName="class">
+            <mat-option value="10">Khối 10</mat-option>
+            <mat-option value="11">Khối 11</mat-option>
+            <mat-option value="12">Khối 12</mat-option>
           </mat-select>
           <small class="form-text text-muted"><b>Lọc</b> khối</small>
         </div>
@@ -112,6 +104,15 @@
               (sort)="sort($event)"
             ></app-sort-icon>
           </th>
+          <th>
+            Ngày tạo
+            <app-sort-icon
+              column="NgayTao"
+              [activeColumn]="sorting.column"
+              [activeDirection]="sorting.direction"
+              (sort)="sort($event)"
+            ></app-sort-icon>
+          </th>
           <th>Thao tác</th>
         </thead>
         <tbody>
@@ -130,6 +131,7 @@
             <td>{{ item.TenBaiKiemTra}} ({{item.NamHoc}})</td>
             <td>{{ item.SoLuongDe }} đề</td>
             <td>{{ item.Lop }}</td>
+            <td>{{ item.NgayTao | date: "dd/MM/YYYY" }}</td>
             <td>
               <a
                 matTooltip="Tạo bài kiểm tra trực tuyến"
